cli/tests/snapshots/cli__check_doctest_level_restriction.snap
---
source: cli/tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
STDERR
Error: argument `--level` cannot be used multiple times in this context
