cli/tests/snapshots/cli__run_files@ok_class.py.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/ok_class.py
---
STDOUT
6 8
STDERR
