cli/tests/snapshots/cli__run_files@ok_stdlib_imports.py.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/ok_stdlib_imports.py
---
STDOUT
STDERR
Traceback (most recent call last):
  File "ok_stdlib_imports.py", line 3, in <module>
    import os
ModuleNotFoundError: No module named 'os'
