cli/tests/snapshots/cli__run_images@above_variadic1.py.snap
---
source: cli/tests/cli.rs
assertion_line: 433
expression: "format!(\"{out}\")"
input_file: cli/tests/images/above_variadic1.py
---
<svg width="60" height="48" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <path d="M 60 8 A 30 8 0 0 1 0 8 A 30 8 0 0 1 60 8 Z" fill="rgba(0, 0, 128, 1.0)" />
      <path d="M 40 24 A 20 8 0 0 1 0 24 A 20 8 0 0 1 40 24 Z" fill="rgba(0, 0, 255, 1.0)" />
    </g>
    <path d="M 20 40 A 10 8 0 0 1 0 40 A 10 8 0 0 1 20 40 Z" fill="rgba(30, 144, 255, 1.0)" />
  </g>
</svg>
